--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,5 +16,10 @@ pipeline {
     echo 'Deploying....'
    }
   }
+  stage('email notification'){
+   steps {
+   echo 'mailing'
+   }
+   }
   }
 }
