--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,9 +17,9 @@ pipeline {
    }
   }
   stage('email notification'){
-   steps {
-   echo 'mailing'
+   mail bcc: '', body: '''hi 
+welcome''', cc: '', from: '', replyTo: '', subject: 'jenkins job', to: 'rajaa15@gmail.com'
    }
-   }
+   
   }
 }
